# colloquium_dmiti

./: CMakeLists.txt  README.md
src/: main.cpp
src/api/calculator/: calculator.cpp  calculator.hpp
src/modules/calculator/: calculator.cpp  calculator.hpp
src/modules/numbers/integer/: integer.cpp  integer.hpp
src/modules/numbers/natural/: natural.cpp  natural.hpp
src/modules/numbers/rational/: rational.cpp  rational.hpp
src/modules/polynomial/: polynomial.cpp  polynomial.hpp
src/ui/: calculator_backend.cpp  calculator_backend.hpp
src/ui/qml/: main.qml  qml.qrc  qmldir
src/ui/qml/components/: CalculatorButton.qml  Display.qml  MathDisplay.qml  Theme.qml
tst/: CMakeLists.txt  test_calculator.cc  test_integer.cc  test_natural.cc  test_polynomial.cc  test_rational.cc
